--- a/src/archive-campaign.html
+++ b/src/archive-campaign.html
@@ -261,19 +261,19 @@
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_1.jpg" alt="多種多少な熱帯魚が泳いでいる様子">
               </div>
-              <div class="campaign-card__body campaign-card__body--sub-page">
+              <div class="campaign-card__body">
                 <div class="campaign-card__category">
                   <p class="campaign-card__category-text">ライセンス講習</p>
                 </div>
-                <div class="campaign-card__title under-line campaign-card__title--sub-page">
-                  <p class="campaign-card__title-text text campaign-card__title-text--sub-page">ライセンス取得</p>
+                <div class="campaign-card__title under-line">
+                  <p class="campaign-card__title-text text">ライセンス取得</p>
                 </div>
               </div>
-              <div class="campaign-card__foot campaign-card__foot--sub-page">
-                <div class="campaign-card__offer campaign-card__offer--sub-page">
+              <div class="campaign-card__foot">
+                <div class="campaign-card__offer">
                   <p>全部コミコミ(お一人様)</p>
                 </div>
-                <div class="campaign-card__wrap campaign-card__wrap--sub-page">
+                <div class="campaign-card__wrap">
                   <div class="campaign-card__original-price">
                     <p class="campaign-card__original-price-text">¥56,000</p>
                   </div>
@@ -307,19 +307,19 @@
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_2.jpg" alt="透き通った浅瀬に浮かぶ船と山と空の景色">
               </div>
-              <div class="campaign-card__body campaign-card__body--sub-page">
+              <div class="campaign-card__body">
                 <div class="campaign-card__category">
                   <p class="campaign-card__category-text">体験ダイビング</p>
                 </div>
-                <div class="campaign-card__title under-line campaign-card__title--sub-page">
-                  <p class="campaign-card__title-text text campaign-card__title-text--sub-page">貸切体験ダイビング</p>
+                <div class="campaign-card__title under-line">
+                  <p class="campaign-card__title-text text">貸切体験ダイビング</p>
                 </div>
               </div>
-              <div class="campaign-card__foot campaign-card__foot--sub-page">
-                <div class="campaign-card__offer campaign-card__offer--sub-page">
+              <div class="campaign-card__foot">
+                <div class="campaign-card__offer">
                   <p>全部コミコミ(お一人様)</p>
                 </div>
-                <div class="campaign-card__wrap campaign-card__wrap--sub-page">
+                <div class="campaign-card__wrap">
                   <div class="campaign-card__original-price">
                     <p class="campaign-card__original-price-text">¥24,000</p>
                   </div>
@@ -353,19 +353,19 @@
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_3.jpg" alt="水中を漂う多数のクラゲ">
               </div>
-              <div class="campaign-card__body campaign-card__body--sub-page">
+              <div class="campaign-card__body">
                 <div class="campaign-card__category">
                   <p class="campaign-card__category-text">体験ダイビング</p>
                 </div>
-                <div class="campaign-card__title under-line campaign-card__title--sub-page">
-                  <p class="campaign-card__title-text text campaign-card__title-text--sub-page">ナイトダイビング</p>
+                <div class="campaign-card__title under-line">
+                  <p class="campaign-card__title-text text">ナイトダイビング</p>
                 </div>
               </div>
-              <div class="campaign-card__foot campaign-card__foot--sub-page">
-                <div class="campaign-card__offer campaign-card__offer--sub-page">
+              <div class="campaign-card__foot">
+                <div class="campaign-card__offer">
                   <p>全部コミコミ(お一人様)</p>
                 </div>
-                <div class="campaign-card__wrap campaign-card__wrap--sub-page">
+                <div class="campaign-card__wrap">
                   <div class="campaign-card__original-price">
                     <p class="campaign-card__original-price-text">¥10,000</p>
                   </div>
@@ -399,19 +399,19 @@
               <div class="campaign-card__img">
                 <img src="./assets/images/common/campaign_4.jpg" alt="ダイバーの集団が海で浮かんでいる様子">
               </div>
-              <div class="campaign-card__body campaign-card__body--sub-page">
+              <div class="campaign-card__body">
                 <div class="campaign-card__category">
                   <p class="campaign-card__category-text">ファンダイビング</p>
                 </div>
-                <div class="campaign-card__title under-line campaign-card__title--sub-page">
-                  <p class="campaign-card__title-text text campaign-card__title-text--sub-page">貸切ファンダイビング</p>
+                <div class="campaign-card__title under-line">
+                  <p class="campaign-card__title-text text">貸切ファンダイビング</p>
                 </div>
               </div>
-              <div class="campaign-card__foot campaign-card__foot--sub-page">
-                <div class="campaign-card__offer campaign-card__offer--sub-page">
+              <div class="campaign-card__foot">
+                <div class="campaign-card__offer">
                   <p>全部コミコミ(お一人様)</p>
                 </div>
-                <div class="campaign-card__wrap campaign-card__wrap--sub-page">
+                <div class="campaign-card__wrap">
                   <div class="campaign-card__original-price">
                     <p class="campaign-card__original-price-text">¥20,000</p>
                   </div>
